--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
+    "lodash.get": "^4.4.2",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -18,6 +19,7 @@
     "swr": "^1.1.2-beta.0"
   },
   "devDependencies": {
+    "@types/lodash.get": "^4.4.6",
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
     "eslint": "7.32.0",
