--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "lodash.get": "^4.4.2",
     "next": "12.0.4",
     "react": "17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "17.0.2",
     "sass": "^1.43.5",
     "swr": "^1.1.2-beta.0"
